Bug 1852801: Allow WinWindowOcclusionTracker members to fail initialization without crashing. r=rkraesig,win-reviewers

This patch also expands the use of EnsureDisplayStatusObserver and
EnsureSessionChangeObserver, using them during the WinWindowOcclusionTracker
constructor, and also in WinWindowOcclusionTracker::Ensure. This gives another
opportunity for these observers to be created when
WinUtils::EnableWindowOcclusion is called.

Differential Revision: https://phabricator.services.mozilla.com/D188039