widget/windows/WinEventObserver.cpp
@@ -25,9 +25,9 @@ LazyLogModule gWinEventObserverLog("WinEventObserver");
 StaticRefPtr<WinEventHub> WinEventHub::sInstance;
 
 // static
-void WinEventHub::Ensure() {
+bool WinEventHub::Ensure() {
   if (sInstance) {
-    return;
+    return true;
   }
 
   LOG("WinEventHub::Ensure()");
@@ -35,10 +35,11 @@ void WinEventHub::Ensure() {
   RefPtr<WinEventHub> instance = new WinEventHub();
   if (!instance->Initialize()) {
     MOZ_ASSERT_UNREACHABLE("unexpected to be called");
-    return;
+    return false;
   }
   sInstance = instance;
   ClearOnShutdown(&sInstance);
+  return true;
 }
 
 WinEventHub::WinEventHub() {
@@ -121,7 +122,9 @@ void WinEventObserver::Destroy() {
 // static
 already_AddRefed<DisplayStatusObserver> DisplayStatusObserver::Create(
     DisplayStatusListener* aListener) {
-  WinEventHub::Ensure();
+  if (!WinEventHub::Ensure()) {
+    return nullptr;
+  }
   RefPtr<DisplayStatusObserver> observer = new DisplayStatusObserver(aListener);
   WinEventHub::Get()->AddObserver(observer);
   return observer.forget();
@@ -167,7 +170,9 @@ void DisplayStatusObserver::OnWinEventProc(HWND aHwnd, UINT aMsg,
 // static
 already_AddRefed<SessionChangeObserver> SessionChangeObserver::Create(
     SessionChangeListener* aListener) {
-  WinEventHub::Ensure();
+  if (!WinEventHub::Ensure()) {
+    return nullptr;
+  }
   RefPtr<SessionChangeObserver> observer = new SessionChangeObserver(aListener);
   WinEventHub::Get()->AddObserver(observer);
   return observer.forget();
